--- a/x-pack/plugins/data_visualizer/public/application/common/components/top_values/_top_values.scss
+++ b/x-pack/plugins/data_visualizer/public/application/common/components/top_values/_top_values.scss
@@ -4,17 +4,16 @@
 
 .topValuesValueLabelContainer {
   margin-right: $euiSizeM;
+  &.topValuesValueLabelContainer--small {
+    width:70px;
+  }
 
-  //&.topValuesValueLabelContainer--small {
-  //  width:250px;
-  //}
-  //
-  //&.topValuesValueLabelContainer--large {
-  //  width: 250px;
-  //}
+  &.topValuesValueLabelContainer--large {
+    width: 300px;
+  }
 }
 
 .topValuesPercentLabelContainer {
   margin-left: $euiSizeM;
-  min-width:50px;
+  width:70px;
 }
